@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-01-17T08:20:01Z",
+  "timestamp" : "2024-01-17T16:20:44Z",
   "count_outdated" : 180247,
   "uniques_outdated" : 1872,
-  "count" : 183532,
-  "uniques" : 1896,
+  "count" : 183625,
+  "uniques" : 1897,
   "clones" : [
     {
       "timestamp": "2024-01-03T00:00:00Z",
-      "count": 31,
-      "count_minmax": [ 31, 50 ],
-      "count_decinc": [ 19, 50 ],
+      "count": 14,
+      "count_minmax": [ 14, 50 ],
+      "count_decinc": [ 36, 50 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,12 +133,12 @@
     },
     {
       "timestamp": "2024-01-17T00:00:00Z",
-      "count": 111,
-      "count_minmax": [ 111, 111 ],
-      "count_decinc": [ 0, 111 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 204,
+      "count_minmax": [ 111, 204 ],
+      "count_decinc": [ 0, 204 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
