@@ -1,3 +1,12 @@
+2024-01-17T16:20:44Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7558674835 # 32
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-17
+* notice: last 14d: unq all: 5 3342
+* notice: prev accum: outdated-unq outdated-all / unq all: 1872 180247 / 1896 183532
+* notice: next accum: outdated-unq outdated-all / unq all: 1872 180247 / 1897 183625
+* notice: prev exec diff / last date diff / accum: unq all: +1 +93 -0 -17 / +2 +204 -0 -0 / 2 204
+* notice: removed / changed dates: [] / [2024-01-03 2024-01-17]
+
 2024-01-17T08:20:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7552879929 # 31
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-17
